# ruspy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: array.rs  fft.rs  lib.rs  math.rs  test.rs
test/: test_ruspy.py
