[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "ruspy"
version = "0.1.1"
description = "Data analysis powered by Rust"
readme = "README.md"
authors = [{ name = "Manas Verma", email = "manas.verma@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]

